:sparkles: Component Control Props

--- a/src/component-patters/styles/custom-styles.css
+++ b/src/component-patters/styles/custom-styles.css
@@ -22,3 +22,10 @@
   color: white;
   border-color: white;
 }
+
+/* Shopping Cart */
+.shopping-cart {
+  position: fixed;
+  right: 10px;
+  top: 0px;
+}
